objects/UPC_Address_Contact__c.object
<CustomObject>
    <description>Created by Nexell to manage Contacts for Addresses</description>
    <fields>
        <fullName>UPC_Address_Details__c</fullName>
        <formula>UPC_Address__r.UPC_Address_Details__c</formula>
        <label>Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UPC Address</label>
        <referenceTo>UPC_ADBASE__c</referenceTo>
        <relationshipLabel>Address Contacts</relationshipLabel>
        <relationshipName>Address_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Contact_Email__c</fullName>
        <formula>UPC_Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Contact_Mobile__c</fullName>
        <formula>UPC_Contact__r.MobilePhone</formula>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Contact_Phone__c</fullName>
        <formula>UPC_Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Address Contacts</relationshipLabel>
        <relationshipName>Address_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site Manager</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Address Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Address Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>